--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,34 @@
-# For GPU support, install torch/torchvision with the correct CUDA version:
-# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
+# Core dependencies
 torch>=2.1.0
 torchvision>=0.16.0
 opencv-python>=4.8.0
-pyyaml>=6.0.1
 numpy>=1.24.0
 pillow>=10.0.0
 tqdm>=4.66.0
-matplotlib>=3.7.0
+
+# Machine learning and data processing
 scikit-learn>=1.3.0
 pandas>=2.0.0
-librosa>=0.10.0  # For future audio analysis
-sqlalchemy>=2.0.0  # For database integration
-filterpy>=1.4.5
 scikit-image>=0.21.0
-python-dotenv>=1.0.0  # For environment variable management
-requests>=2.31.0  # For API calls
+seaborn>=0.12.0
+matplotlib>=3.7.0
+
+# Database and data management
+sqlalchemy>=2.0.0
+python-dotenv>=1.0.0
+cryptography>=41.0.0
+
+# Audio and visualization
+librosa>=0.10.0  # For future audio analysis
 tensorboard>=2.14.0  # For training visualization
+
+# Detection and tracking
 ultralytics>=8.0.0  # For YOLOv8 detection
-cryptography>=41.0.0  # For database encryption
+filterpy>=1.4.5
+
+# Utilities
+pyyaml>=6.0.1
+requests>=2.31.0  # For API calls
+
+# Note: For GPU support, install torch/torchvision with the correct CUDA version:
+# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
