--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,11 @@ crow_embeddings.db
 *.db
 *.db-journal
 
+# Data directories
+videos/
+crow_crops/
+clustering_results/
+
 # Video files
 *.mp4
 *.avi
