--- a/requirements.txt
+++ b/requirements.txt
@@ -30,5 +30,16 @@ filterpy>=1.4.5
 pyyaml>=6.0.1
 requests>=2.31.0  # For API calls
 
+# Testing dependencies
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-env==1.1.3
+pytest-xdist==3.3.1
+pytest-timeout==2.2.0
+pytest-mock==3.12.0
+pytest-benchmark==4.0.0
+coverage==7.3.2
+soundfile==0.12.1  # For audio testing
+
 # Note: For GPU support, install torch/torchvision with the correct CUDA version:
 # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
