--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 # Core dependencies
+torch
+torchvision
+torchaudio
 torch>=2.1.0
-torchvision>=0.16.0
 opencv-python>=4.8.0
+numpy
 numpy>=1.24.0
 pillow>=10.0.0
+tqdm
 tqdm>=4.66.0
 
 # Machine learning and data processing
+scikit-learn
 scikit-learn>=1.3.0
 pandas>=2.0.0
 scikit-image>=0.21.0
+seaborn
 seaborn>=0.12.0
+matplotlib
 matplotlib>=3.7.0
 
 # Database and data management
@@ -19,6 +26,7 @@ python-dotenv>=1.0.0
 cryptography>=41.0.0
 
 # Audio and visualization
+librosa
 librosa>=0.10.0  # For future audio analysis
 tensorboard>=2.14.0  # For training visualization
 
@@ -43,3 +51,5 @@ soundfile==0.12.1  # For audio testing
 
 # Note: For GPU support, install torch/torchvision with the correct CUDA version:
 # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
+
+# Added by Cascade for Facebeak project
