Add suspect lineup testing framework and documentation

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,9 @@ markers =
     video: mark test as requiring video data (will be skipped if no videos available)
     unit: mark test as a unit test (default)
     integration: mark test as an integration test
+    suspect_lineup: mark test as related to suspect lineup feature
+    database: mark test as requiring database operations
+    gui: mark test as related to GUI components
 
 # Test collection settings
 testpaths = tests
