--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
 # Core dependencies
-torch
-torchvision
-torchaudio
 torch>=2.1.0
+torchvision>=0.16.0
+torchaudio>=2.1.0
 opencv-python>=4.8.0
-numpy
 numpy>=1.24.0
 pillow>=10.0.0
-tqdm
 tqdm>=4.66.0
 
 # Machine learning and data processing
-scikit-learn
 scikit-learn>=1.3.0
 pandas>=2.0.0
 scikit-image>=0.21.0
-seaborn
+scipy>=1.11.0  # Added scipy as it's used in multiple files
 seaborn>=0.12.0
-matplotlib
 matplotlib>=3.7.0
 plotly>=5.17.0  # For interactive visualizations in unsupervised learning
 
@@ -26,18 +21,21 @@ sqlalchemy>=2.0.0
 python-dotenv>=1.0.0
 cryptography>=41.0.0
 
-# Audio and visualization
-librosa
-librosa>=0.10.0  # For future audio analysis
+# Audio processing
+librosa>=0.10.0  # For audio analysis
+soundfile>=0.12.1  # For audio file I/O
+
+# Visualization and GUI
 tensorboard>=2.14.0  # For training visualization
 
 # Detection and tracking
 ultralytics>=8.0.0  # For YOLOv8 detection
-filterpy>=1.4.5
+filterpy>=1.4.5  # For Kalman filtering in tracking
 
 # Utilities
 pyyaml>=6.0.1
 requests>=2.31.0  # For API calls
+psutil>=5.9.0  # For system monitoring
 
 # Testing dependencies
 pytest==7.4.3
@@ -48,9 +46,11 @@ pytest-timeout==2.2.0
 pytest-mock==3.12.0
 pytest-benchmark==4.0.0
 coverage==7.3.2
-soundfile==0.12.1  # For audio testing
 
 # Note: For GPU support, install torch/torchvision with the correct CUDA version:
-# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+
+# For CPU-only installation:
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
 # Added by Cascade for Facebeak project
