Add comprehensive non-crow image integration for improved training - Add download_not_crow_samples.py for CUB and COCO dataset processing - Add crop_not_crow_samples.py for generating 512x512 aspect-ratio-preserving crops - Update train_crow_classifier.py to include non-crow images with 'not_a_crow' label - Add TRAINING_INTEGRATION_GUIDE.md with complete integration instructions - Update image transforms to use 512x512 resize and center crop - Add comprehensive test scripts and utilities - Generate 2,097 non-crow images (1,200 COCO + 897 CUB) for training - Fix aspect ratio distortion issues in non-crow image processing - Add proper data loading integration for crow classifier training

--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,19 @@ test_multi_crow.py
 
 # Large training configuration files (>100MB should be managed with Git LFS)
 training_config.json
+
+# User photos and images
+Photos/
+
+# Ignore CUB-200-2011 dataset files
+CUB_200_2011/
+CUB_200_2011.tgz
+
+# Ignore COCO dataset files
+val2017/
+val2017.zip
+annotations/
+annotations_trainval2017.zip
+
+# Ignore generated not-crow samples
+not_crow_samples/
